@@ -9,6 +9,8 @@ univention-office365 (1.1.0-1) unstable; urgency=low
   * listener LDAP filter can be modified with office365/tenant/filter to for
     example resync only one tenant or to disable a tenant
   * add multi tenant support to user listener (and tests)
+  * add tenant name to all exception messages
+  * improve logging
 
  -- Daniel Troeder <troeder@univention.de>  Tue, 19 Sep 2017 09:39:55 +0200
 
